--- a/Angular/angular.json
+++ b/Angular/angular.json
@@ -30,7 +30,7 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/devextreme/dist/css/dx.material.blue.light.compact.css",
+              "node_modules/devextreme/dist/css/dx.light.css",
               "src/styles.scss"
             ],
             "scripts": []
